force-app/main/default/objects/Location/Location.object-meta.xml
<CustomObject>
    <!---->
    <!-- <compactLayoutAssignment>SYSTEM</compactLayoutAssignment> -->
    <!-- <enableFeeds>false</enableFeeds>
-->
    <!-- <sharingModel>ReadWrite</sharingModel> -->
</CustomObject>