force-app/main/default/objects/Location/fields/Additional__c.field-meta.xml
<CustomField>
    <fullName>Additional__c</fullName>
    <formula>CASE(RecordType.Name,
&apos;Address&apos;,
&apos;[&apos;+Country__r.Name+&apos;]&apos;+&apos;[&apos;+ Province__r.Name+&apos;]&apos;+&apos;[&apos;+ City__r.Name+&apos;]&apos;+&apos;[&apos;+ Zip_Code__r.Name+&apos;]&apos;,
&apos;Province&apos;,
&apos;[&apos;+Country__r.Name+&apos;]&apos;,
&apos;City&apos;,
&apos;[&apos;+Country__r.Name+&apos;]&apos;+&apos;[&apos;+ Province__r.Name+&apos;]&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional</label>
    <type>Text</type>
</CustomField>