force-app/main/default/objects/Location/fields/ADDRESS_ID__c.field-meta.xml
<CustomField>
    <fullName>ADDRESS_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ADDRESS_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>