force-app/main/default/objects/Location/fields/Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Address_Name__c</fullName>
    <label>Address Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>