force-app/main/default/objects/Location/fields/Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_ID__c</fullName>
    <label>Branch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>