force-app/main/default/objects/Location/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Master Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Locations (Branch Name)</relationshipLabel>
    <relationshipName>Locations1</relationshipName>
    <type>Lookup</type>
</CustomField>