force-app/main/default/objects/Location/fields/City_ID__c.field-meta.xml
<CustomField>
    <fullName>City_ID__c</fullName>
    <externalId>true</externalId>
    <label>City ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>