force-app/main/default/objects/Location/fields/City_Name__c.field-meta.xml
<CustomField>
    <fullName>City_Name__c</fullName>
    <formula>City__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Name</label>
    <type>Text</type>
</CustomField>