force-app/main/default/objects/Location/fields/CREATED_BY__c.field-meta.xml
<CustomField>
    <fullName>CREATED_BY__c</fullName>
    <label>CREATED_BY</label>
    <length>80</length>
    <type>Text</type>
</CustomField>