force-app/main/default/objects/Location/fields/Earthquake_Zone__c.field-meta.xml
<CustomField>
    <fullName>Earthquake_Zone__c</fullName>
    <label>Earthquake Zone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>