force-app/main/default/objects/Location/fields/Filter_Key__c.field-meta.xml
<CustomField>
    <fullName>Filter_Key__c</fullName>
    <formula>Name  
+ &quot; &quot; + Village__r.Name 
+ &quot; &quot; + City__r.Name 
+ &quot; &quot; + Province__r.Name 
+ &quot; &quot; + Country__r.Name 
+ &quot; &quot; + Zip_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter Key</label>
    <type>Text</type>
</CustomField>