force-app/main/default/objects/Location/fields/PHONE_AREA__c.field-meta.xml
<CustomField>
    <fullName>PHONE_AREA__c</fullName>
    <label>PHONE_AREA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>