force-app/main/default/objects/Location/fields/Province_ID_F__c.field-meta.xml
<CustomField>
    <fullName>Province_ID_F__c</fullName>
    <formula>Province__r.Province_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Province ID</label>
    <type>Text</type>
</CustomField>