force-app/main/default/objects/Location/fields/Province_Name__c.field-meta.xml
<CustomField>
    <fullName>Province_Name__c</fullName>
    <formula>Province__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Province Name</label>
    <type>Text</type>
</CustomField>