force-app/main/default/objects/Location/fields/Tsunami_Zone__c.field-meta.xml
<CustomField>
    <fullName>Tsunami_Zone__c</fullName>
    <label>Tsunami Zone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>