force-app/main/default/objects/Location/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Village</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Locations (Kecamatan)</relationshipLabel>
    <relationshipName>Locations2</relationshipName>
    <type>Lookup</type>
</CustomField>