force-app/main/default/objects/Location/fields/Village_ID__c.field-meta.xml
<CustomField>
    <fullName>Village_ID__c</fullName>
    <externalId>true</externalId>
    <label>Village ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>