force-app/main/default/objects/Location/fields/Village_ID_F__c.field-meta.xml
<CustomField>
    <fullName>Village_ID_F__c</fullName>
    <formula>Village__r.Village_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Village ID</label>
    <type>Text</type>
</CustomField>