force-app/main/default/objects/Location/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zip Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Zip Code</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Locations (Zip Code)</relationshipLabel>
    <relationshipName>Locations4</relationshipName>
    <type>Lookup</type>
</CustomField>