force-app/main/default/objects/Location/fields/Zip_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Zip Code ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>