force-app/main/default/objects/Location/fields/Zip_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_Name__c</fullName>
    <formula>Zip_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Code Name</label>
    <type>Text</type>
</CustomField>