force-app/main/default/objects/Location/recordTypes/Address.recordType-meta.xml
<RecordType>
    <fullName>Address</fullName>
    <active>true</active>
    <label>Address</label>
</RecordType>