force-app/main/default/objects/Location/recordTypes/Country.recordType-meta.xml
<RecordType>
    <fullName>Country</fullName>
    <active>true</active>
    <label>Country</label>
    <!---->
</RecordType>