force-app/main/default/objects/Location/recordTypes/Province.recordType-meta.xml
<RecordType>
    <fullName>Province</fullName>
    <active>true</active>
    <label>Province</label>
    <!---->
</RecordType>