force-app/main/default/objects/Location/recordTypes/Village.recordType-meta.xml
<RecordType>
    <fullName>Village</fullName>
    <active>false</active>
    <label>Village</label>
</RecordType>