force-app/main/default/objects/Location/recordTypes/Zip_Code.recordType-meta.xml
<RecordType>
    <fullName>Zip_Code</fullName>
    <active>true</active>
    <label>Zip Code</label>
</RecordType>