force-app/main/default/objects/Location/listViews/City.listView-meta.xml
<ListView>
    <fullName>City</fullName>
    <columns>Name</columns>
    <columns>City_ID__c</columns>
    <columns>Province__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>City</value>
    </filters>
    <label>City</label>
</ListView>