force-app/main/default/objects/Location/listViews/Country.listView-meta.xml
<ListView>
    <fullName>Country</fullName>
    <columns>Name</columns>
    <columns>LocationType</columns>
    <columns>Country_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>Country</value>
    </filters>
    <label>Country</label>
</ListView>