force-app/main/default/objects/Location/listViews/Provinsi.listView-meta.xml
<ListView>
    <fullName>Provinsi</fullName>
    <columns>Name</columns>
    <columns>LocationType</columns>
    <columns>Province_ID__c</columns>
    <columns>Zip_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>Province</value>
    </filters>
    <label>Provinsi</label>
</ListView>