force-app/main/default/objects/Location/listViews/Zip_Code.listView-meta.xml
<ListView>
    <fullName>Zip_Code</fullName>
    <columns>Name</columns>
    <columns>Province__c</columns>
    <columns>City__c</columns>
    <columns>Village__c</columns>
    <columns>LocationType</columns>
    <columns>Province_ID_F__c</columns>
    <columns>Branch_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationType</field>
        <operation>equals</operation>
        <value>Zip Code</value>
    </filters>
    <label>Zip Code</label>
</ListView>